# Assignment_2_Aravind_Jayachandran_Ushakumari

./: .coverage  .gitignore  Dockerfile  LOAD_TEST_REPORT.md  README.md  locustfile.py  main.py  pyproject.toml  requirements.txt  train.py
app/: DEPLOYMENT.md  main.py
app/data/: model.json
tests/: conftest.py  test_api.py
